# simple-wireplumber-gui

./: .gitignore  README.md  io.github.dyegoaurelio.simple-wireplumber-gui.json  meson.build  org.gnome.Example.json
data/: io.github.dyegoaurelio.simple-wireplumber-gui.appdata.xml.in  io.github.dyegoaurelio.simple-wireplumber-gui.desktop.in  io.github.dyegoaurelio.simple-wireplumber-gui.gschema.xml  meson.build  org.gnome.Example.appdata.xml.in  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build  nl.po  simple-wireplumber-gui.pot  tr.po
src/: app.py  data_storage.py  main.py  meson.build  parse_pipewire_data.py  pipewire.py  simple-wireplumber-gui.gresource.xml  simple-wireplumber-gui.in  window.py  window.ui
src/gtk/: edit-device-modal.ui  info-device-modal.ui
